# money_manager

./: CMakeLists.txt  cashpro_wrapper.cpp  cashpro_wrapper.h  main.cpp
